--- a/linktreedishan.css
+++ b/linktreedishan.css
@@ -22,6 +22,7 @@ h1{
 }
 h6{
     border: 2px none;
+    color: rgb(255, 255, 255);
 }
  body{
     background-image: url(https://plus.unsplash.com/premium_vector-1722950274237-580f74ace94a?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufD);
